[project]
name = "voloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "scipy>=1.15.3",
    "torch>=2.7.0",
]

[project.scripts]
voloader = "voloader:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
